changed tabble 1 contents, added error values, texts to task 1

--- a/DO/Protokoll/DO_Protokoll_ausw.tex
+++ b/DO/Protokoll/DO_Protokoll_ausw.tex
@@ -20,28 +20,28 @@ In Aufgabe 1 nahmen wir Messungen bezüglich des Strahlenschutzes vor. Dazu verw
 Die roten Kästchen im Bild bezeichnen die vier Punkte, an denen die BeO-Detektoren lagen. Die oberen drei liegen auf einer Steckerleiste, ca. 40cm unterhalb der Quelle. Das Kästchen bei \textbf{5} bezeichnet den \textquotedblleft Mitfahrer \textquotedblright.
 
 \subsubsection{Strahlungswerte im Labor am Anfang des Versuchstages}
-Zunächst gehen wir auf Tabelle \ref{dft:Arbeitsplatz} ein. Die Werte unterhalb des zweiten Trennstriches sind bei 
-geöffnetem Kollimatorverschluss aufgenommen worden, während die darüber bei geschlossenem Verschluss notiert wurden. 
-Man sieht, dass bei geschlossenem Stopfen  am Arbeitsplatz für einen Praktikanten, der eine Maximalbelastung von 6mSv
- im Jahr erreichen darf, kaum eine Gefahr besteht, diesen Grenzwert an einem Tag zu überschreiten. Um die maximale 
- Tagesdosis zu erreichen, benötigte dieser ca. 12,5 Stunden. Solange darf ein Praktikant oder Lehrling gesetzlich aber 
-nicht zur Arbeit gezwungen werden.\\
-Nähert man sich der Quelle, kann man bei 50cm Abstand einen deutlichen Anstieg in der Strahlendosis erkennen, was sich 
-auch deutlich an der Zeit widerspiegelt, die sich der Praktikant in dieser Nähe aufhalten sollte. Diese ist nun sechsmal
-kleiner als am Arbeitsplatz.\\
-Zu beachten sei auch, dass der Kollimator auf linker und rechter Seite offenbar weniger stark abschirmt. Dies ist ein 
-interessantes Ergebnis, da sich die maximale Aufenthaltsdauer damit auch deutlich verkürzt 50cm vor der Quelle ist die
-Abschirmung erwartungsgemäß am schwächsten, da dort der Kollimatorverschluss vorhanden ist und dieser nicht so gut abschirmen
-kann wie die Standardwände. Dementsprechend logisch ist es, sich nicht längere Zeit in den Strahl zu stellen, was sich in 
-einer Maximaldauer von $t_{max} \cong 17min$ zeigt. Dementsprechend fällt auch das Ergebnis der Messung 8cm vor der Quelle auf. 
-Eine Aufenthaltsdauer unterhalb von 2min am Tag ist hier also angebracht.
-Im Allgemeinen sollte man deshalb seinen Arbeitsplatz nicht neben der Messanordnung aufbauen, auch wenn es aus Bequemlichkeit 
-zunächst sinnvoll erscheinen mag. Es verkürzt nicht nur die Laufwege, die man im Raum hat, sondern auch erhöht auch die Gefahr, 
-an strahlenbedingten Leiden zu erkranken.
+
+Schauen wir uns nun interessante Orte an. Tabelle \ref{dft:Arbeitsplatz} zeigt deutlich, dass am PC-Arbeitsplatz kein Risiko besteht, die 6mSv, die ein Praktikant oder Auszubildender im Jahr nicht überschreiten darf, zu erreichen. Nähert man sich der Quelle auf 50cm an und bleibt dahinter stehen, so verringert sich offenbar die maximale Aufenthaltsdauer pro Tag. Offenbar ist ein achtstündiger Arbeitstag noch immer in der Maximaldauer von 21 Stunden enthalten. \\
+Jetzt wird es interessanter. Links und rechts von der Quelle, scheint die Abschirmung des Kollimators nicht mehr so stark wie hinter der Quelle. Ein Arbeitstag darf von einem Praktikanten also nicht daneben verbracht werden, sondern, unter Berücksichtigung der Fehler, die man während der Messung durch Zittrigkeit erzeugt, höchsten 7 Stunden - pro Tag, 7 Tage die Woche. 
+In der Strahlrichtung vor der Quelle misst man erwartungsgemäß deutlich höhere Dosen, die die maximale Verweildauer pro Tag minimieren. 8cm vor der verschlossenen Kollimatoröffnung sollte man sich als Student möglichst weniger als 20 Minuten aufhalten.\\
+Deutlich wird auch, dass die Belastung durch Strahlung überall um die Quelle größer wird, wenn man den Kollimatorverschluss öffnet. So haben wir hinter dem Kollimator zwar immer noch fast zwei Arbeitstage, um die Eintagesagesdosis zu erreichen, verlieren aber in Zahlen sechst Stunden an Aufenthaltsdauer. \\
+Dabei ist zu beachten, dass die Tagesdosis den ganzen Tag betrifft, also 24 Stunden.
+Die Maximaldauer ergibt sich aus der durchschnittlichen Tagesdosis folgendermaßen:
+
+\begin{equation*}
+    t_{max} = \frac{0,0164 mSv}{\dot D} 
+\end{equation*}
+\ \\
+Dabei trägt \.D die Einheit mSv/h\\
+
+Bezüglich der Messergegbnisse kann man noch weitere Fehlerquellen erwähnen. Das verwendete Dosimeter  ist nicht nur einer Unsicherheit durch den Haltenden ausgesetzt, sondern wurde auch bemerkt, dass zu verschiedenen Zeitpunkten die Messwerte sprungartig in die Höhe schnellten und sich nach ca. zwei Minuten senkten, was in etwa der Zeit für die Mittelung des Gerätes entspricht.
 
 \subsubsection{Strahlendosis im Labor über 2 Tage}
 Nun schauen wir uns Tabelle \ref{dft:Raum} an. Hier wurden Daten über fast zwei Tage gesammelt. Man sieht 
 deutlich, dass der Mitfahrer, welcher am Versuchstag immer schwankenden Werten ausgesetzt war, eine Dosis von 
 etwa 0,5mSv gemessen hat. Dies entspricht etwa der Hälfte von dem, was eine Standardperson in einem Jahr an 
-künstlicher Strahlung erfahren darf. Fraglich ist allerdings, ob dieser Wert nicht ein Ergebnis von Störungen, 
-die andere Experimente verursacht haben, ist.  
+künstlicher Strahlenzufuhr erfahren darf. Fraglich ist allerdings, ob dieser Wert nicht ein Ergebnis von Störungen, 
+die andere Experimente verursacht haben, ist, da auch mit dem tragbaren Dosimeter zwischenzeitlich einzelne Peaks gemessen wurden.
+Man erkennt allerdings gut, dass der BeO-Sensor, der hinter der Quelle lag, eine deutlich geringere Strahlendosis maß als jene, die auf der Steckerleiste 1,8m vor und auf der Steckerleiste neben der Quelle lagen. Dies bestätigt die Vermutung, die Abschirmung hinter der Quelle sei stärker als jene an den Seiten.
+
+\subsection{Winkelabhängigkeit einer Ionisationskammer}
