--- a/DO/Protokoll/DO_Protokoll_df.tex
+++ b/DO/Protokoll/DO_Protokoll_df.tex
@@ -7,17 +7,17 @@ Im Zweiten Schritt haben wir mittels vier der BeO-Sonden, die von der Betreuerin
 \minipanf
 	\begin{center}
 					\begin{tabular}{l|c|c|c}
-								\textbf{Ort} & \textbf{\.D} [$\mu$Sv/h] & \textbf{\.D} [mSv/a]  & \textbf{t$_{max}$} [min/d]\\ 
-						\hline  Arbeitsplatz (vor PC) & 0,15  &   1,31 & 750,61\\ 
-								50cm hinter Quelle    & 0,77  &   6,75 & 146,61\\ 
-								50cm rechts der Quelle& 2,28  &  19,97 &  49,38\\ 
-								50cm links der Quelle & 2,41  &  21,11 &  46,72\\ 
-								50cm vor der Quelle   & 6,34  &  55,53 &  17,76\\ 
-								8cm hinter der Quelle & 5,20  &  45,55 &  21,65\\ 
-								8cm vor der Quelle    & 61,20 & 536,11 &   1,84\\
-						\hline  50cm hinter Quelle    & 1,06  &   9,29 & 106,22\\
-								50cm rechts der Quelle& 2,68  &  23,48 &  42,01\\ 
-								50cm links der Quelle & 3,22  &  28,71 &  34,97\\
+								\textbf{Ort} & \textbf{\.D} [$\mu$Sv/h] & \textbf{\.D} [mSv/a]  & \textbf{t$_{max}$} [h]\\ 
+						\hline  Arbeitsplatz (vor PC) & 0,15  &   1,31 & 109,59\\ 
+								50cm hinter Quelle    & 0,77  &   6,75 &  21,35\\ 
+								50cm rechts der Quelle& 2,28  &  19,97 &   7,21\\ 
+								50cm links der Quelle & 2,41  &  21,11 &   6,82\\ 
+								50cm vor der Quelle   & 6,34  &  55,53 &   2,59\\ 
+								8cm hinter der Quelle & 5,20  &  45,55 &   3,16\\ 
+								8cm vor der Quelle    & 61,20 & 536,11 &   0,27\\
+						\hline  50cm hinter Quelle    & 1,06  &   9,29 &  15,51\\
+								50cm rechts der Quelle& 2,68  &  23,48 &   6,13\\ 
+								50cm links der Quelle & 3,22  &  28,71 &   5,11\\
 					\end{tabular}	
 					\captionof{table}{Messtabelle für Dosisleistung an verschiedenen Orten und der daraus resultierenden maximalen Verweildauer pro Tag}
 					\label{dft:Arbeitsplatz}
