--- a/DO/Protokoll/DO_Protokoll_main.tex
+++ b/DO/Protokoll/DO_Protokoll_main.tex
@@ -27,10 +27,10 @@
 
 \tableofcontents
 
-\include{DO_Protokoll_einf} 	% Einführung
 \input{DO_Protokoll_aufg}		% Aufgabenstellung
 \input{DO_Protokoll_phys}		% Physikalischer Hintergrund
 \input{DO_Protokoll_df}			% Durchführung
 \input{DO_Protokoll_ausw}		% Auswertung
+\include{DO_Protokoll_literatur}
 
 \end{document}
