--- a/DO/Protokoll/DO_Protokoll_main.tex
+++ b/DO/Protokoll/DO_Protokoll_main.tex
@@ -9,6 +9,9 @@
 \usepackage{graphicx}
 \usepackage{shadethm}
 \usepackage{caption}
+\usepackage{tikz} 
+
+
 
 \newshadetheorem{sdefinition}{Definition}
 \newenvironment{definition}[1][]{%
