--- a/DO/Protokoll/DO_Protokoll_phys.tex
+++ b/DO/Protokoll/DO_Protokoll_phys.tex
@@ -43,12 +43,39 @@ Nun wollen wir noch die Abhängigkeit des Ergebnisses vom Druck p und der Temper
 \begin{equation}
 	\rho = \rho_0 \cdot \frac{T_0}{T} \cdot \frac{p}{p_0} ,
 	\ T_0 = 293,15\ K,\ p_0 = 101,3\ kPa, \rho_0 =1,20 \frac{kg}{m^3}
+    \label{formel:kappa}
 \end{equation}
 
-\subsection{Dosimetrie vermittels optisch stimulierter Lumineszenz}
 
-Die Funktionsweise der optisch stimulierten Lumineszenz kann über ein Bändermodell erklärt werden. 
+\subsection{Optisch stimulierte Lumineszenz}
 
+Die Funktionsweise der optisch stimulierten Lumineszenz kann über ein Bändermodell erklärt werden. Grundsätzlich beschreibt das Phänomen der Lumineszenz die Lichtemission beim Übergang eines physikalischen Systems von einem angeregten in seinen Grundzustand.
+Die Anregung des Systems kann beispielsweise durch Strahlung erfolgen. Typischerweise tritt dieses Phänomen bei elektrischen Isolatoren auf.\\
+Unregelmäßigkeiten im Kristallgitter erzeugen zwischen Leitungs- (LB) und Valenzband (VB) zusätzliche Energieniveaus. Unterhalb der Fermi-Energie heißen diese Niveaus Aktivatorterme, oberhalb davon Haftterme. 
+
+\begin{center}
+    \minipanf    
+    \makebox[\textwidth]{\includegraphics[width=1.1\linewidth, height=0.35\textheight]{pic/baendermodell}}
+    \captionof{figure}{Schema zur optisch stimulierten Lumineszenz}
+    \label{fig:band}
+    \minipend
+\end{center}
+
+Im Grundzustand befinden sich Elektronen nur im Valenzband und den Aktivatortermen.
+Regt man das System allerdings an, zum Beisiel durch ionisierende Strahlung, können einige Elektronen vom Grundzustand auf das Leitungsband oder die Hafterme springen. Aus dem Leitungsband springen sie entweder direkt un den Grundzustand, wobei sie Licht emittieren, oder fallen zunächst auf den metastabilen Zustand im Haftterm, der die Elektronen einige Zeit speichert.
+Fällt nun Licht mit einer speziellen Wellenlänge auf das zuvor bestrahlte Material, springen die Elektronen aus den Hafttermen in das Leitungsband und fallen von dort meist in den Grundzustand, wobei sie Licht emittieren.
 
 \subsection{BeO$max$-Funktionsprinzip}
-Wir benutzen hier passive Sonden aus Berylliumoxid als Leuchtstoff. Diese Verbindung hat eine effektive Ordnungszahl von 7,13
+Wir benutzen hier passive Sonden aus Berylliumoxid als Leuchtstoff. Diese Verbindung hat eine effektive Ordnungszahl von 7,13, was eine hohe Ähnlichkeit zu menschlichem Gewebe darstellt und deshalb ähnliche Absorptionseigenschaften besitzt.
+Man bestrahlt die Sonden für ein zuvor berechnetes Zeitintervall. Danach sollte eine Abklingzeit von ca. 15 Minuten eingehalten werden, ehe die Sonden belichtet und ausgelesen werden. Damit wird ein Rauschen vermieden und sichergestellt, dass nur die in den Hafttermen gespeicherten Elektronen eine Rolle bei der Erzeugung des Lumineszenzlichtes spielen, bevor die Haftterme optisch angeregt werden.\\
+Die passiven Sensoren haben jeder für sich ein spezifisches Ansprechvermögen, welches aus einem Signal vor der Bestrahlung, sowie nach der Bestrahlung und einer bekannten Referenzdosis bestimmt werden kann. Das Signal aus der Nullmessung ändert sich nach jeder optischen Stimulation und muss von Chip zu Chip und Messung zu Messung immer neu bestimmt werden. Damit berechnet sich das Ansprechvermögen folgendermaßen:
+
+\begin{equation}
+    \epsilon = \frac{LS_R - LS_{R,0}}{D_R}
+\end{equation}
+
+Dabei beschreiben LS$_R$ das Lichtsignal aus der Messung bekannter Dosis, LS$_{R,0}$ das Nullsignal und D$_R$ die Referenzdosis.
+Nachfolgende Gleichung beschreibt die Errechnung der Dosis aus den Lichtsignalen der Nullmessung, der Messung nach der Bestrahlung und dem Ansprechvermögen:
+\begin{equation}
+    D = \frac{LS - LS_0}{\epsilon}
+\end{equation}
