--- a/DO/Protokoll/DO_Protokoll_literatur.tex
+++ b/DO/Protokoll/DO_Protokoll_literatur.tex
@@ -1,4 +1,6 @@
 \begin{thebibliography}{99}
-\bibitem [01] {Paper} Guck J. et al: Optical deformability as an inherent cell marker for testing 	malignant transformation and metastatic competence, 2005
+\bibitem [01] {PA_alt} A.Jahn: Dosimetrie. Dresden,03/2008 
+\bibitem [02] {PA_neu} A.Jahn, C. Müller: Versuchsanleitung Grundpraktikum Dosimetrie. Dresden,03/2015
+\bibitem [03] {PA_RM1} PD Dr. J. Henniger; Dr. R. Schwierz; F. Hartung: Radiometrie 1 - Geiger-Müller-Zählrohr. Dresden,03/2015
 
 \end{thebibliography}
