--- a/DO/Protokoll/DO_Protokoll_main.tex
+++ b/DO/Protokoll/DO_Protokoll_main.tex
@@ -29,6 +29,7 @@
 \include{DO_Protokoll_title} 	% Titelseite
 
 \tableofcontents
+\newpage 
 
 \input{DO_Protokoll_aufg}		% Aufgabenstellung
 \input{DO_Protokoll_phys}		% Physikalischer Hintergrund
