--- a/DO/Protokoll/DO_Protokoll_title.tex
+++ b/DO/Protokoll/DO_Protokoll_title.tex
@@ -15,7 +15,7 @@
 %	TITLE SECTION
 %----------------------------------------------------------------------------------------
 
-\HRule \\[0.4cm]
+\HRule \\[0.7cm]
 { \huge \bfseries Dosimetrie}\\[0.4cm] % Title of your document
 \HRule \\[1.5cm]
  
@@ -25,7 +25,7 @@
 
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
-\emph{Author:}\\
+\emph{Autoren:}\\
 Toni \textsc{Ehmcke}\\
 Christian \textsc{Siegel}
 \end{flushleft}
