--- a/DO/Protokoll/DO_Protokoll_phys.tex
+++ b/DO/Protokoll/DO_Protokoll_phys.tex
@@ -14,17 +14,17 @@ Dabei findet man, dass die Dosisleistung einer Punktquelle mit dem Quadrat des A
 \begin{equation*}
 		\dot{D} \propto \frac{1}{d^2}
 \end{equation*}
-Diesen Zusammenhang nennt man \textbf{Abstandsquadratgesetz}.
+Diesen Zusammenhang nennt man \textbf{Abstandsquadratgesetz}.\cite{PA_neu}
 
 \subsection{Aktivität}
 Um die Dosisleistung für die gegebenen $\gamma$-Strahler in Aufgabe 2.3 abzuschätzen, benötigen wir die \underline{Aktivität A} als Maß für die Anzahl der spontanen Kernumwandlungen pro Zeiteinheit. Mit dem exponentiellen Zerfallsgesetz erhalten wir:
 \begin{equation} \label{eq:aktivitaet}
 	A(t)=A(t=0) \cdot \left(\frac{1}{2}\right)^{\frac{t}{T_{1/2}}}, [A] = 1/s \equiv Bq \textrm{(Bequerel)}
 \end{equation}
-Hier bei ist $T_{1/2}$ die Halbwertszeit des gegebenen Isotops.
+Hier bei ist $T_{1/2}$ die Halbwertszeit des gegebenen Isotops.\cite{PA_RM1}
 
 \subsection{Messprinzip: Ionisationskammer}
-Grob gesprochen ist eine Ionisationskammer ein (beliebig geformter) Kondensator, dessen Dielektrikum gasförmig (in unserem Fall Luft) vorliegt. Tritt ionisierende Strahlung in das Kammervolumen, so entstehen durch Wechselwirkung mit den Gasteilchen Elektronen-Ionen-Paare (Primärteilchen). Die dabei herausgelösten Ladungsträger gelangen nun im Idealfall durch Coulomb-Wechselwirkung zu einer Kondensatorplatte, wo sie nun als Stromfluss I nachgewiesen werden können. Für näherungsweise konstante Dosisleistungen im Zeitintervall $\Delta t$ erhalten wir die Proportialität zwischen dem Stromfluss und der Dosis:\\ 
+Grob gesprochen ist eine Ionisationskammer ein (beliebig geformter) Kondensator, dessen Dielektrikum gasförmig (in unserem Fall Luft) vorliegt. Tritt ionisierende Strahlung in das Kammervolumen, so entstehen durch Wechselwirkung mit den Gasteilchen Elektronen-Ionen-Paare (Primärteilchen). Die dabei herausgelösten Ladungsträger gelangen nun im Idealfall durch Coulomb-Wechselwirkung zu einer Kondensatorplatte, wo sie nun als Stromfluss I nachgewiesen werden können. Für näherungsweise konstante Dosisleistungen im Zeitintervall $\Delta t$ erhalten wir die Proportialität zwischen dem Stromfluss und der Dosis:
 
 \begin{equation} \label{eq:Ionenkammer}
 	D(t) = D(t_0) + \int \limits_{t_0}^{t} \dot{D}(\tau) \mathrm{d}\tau \approx \frac{w \cdot \Delta t}{e \cdot \rho \cdot V} \cdot I
@@ -38,7 +38,7 @@ In Gleichung \ref{eq:Ionenkammer} sehen wir die Abhängigkeit der Dosis von der 
 	\ T_0 = 293,15\ K,\ p_0 = 101,3\ kPa, \rho_0 =1,20 \frac{kg}{m^3}
     \label{formel:kappa}
 \end{equation}
-Wobei $\rho_0$ der Dichte von Luft bei Normbedingungen entspricht. Den Einfluss der Luftfeuchte wollen wir an dieser Stelle vernachlässigen.
+Wobei $\rho_0$ der Dichte von Luft bei Normbedingungen entspricht. Den Einfluss der Luftfeuchte wollen wir an dieser Stelle vernachlässigen. \cite{PA_neu}
 
 
 \subsection{Optisch stimulierte Lumineszenz}
@@ -50,26 +50,26 @@ Unregelmäßigkeiten im Kristallgitter erzeugen zwischen Leitungs- (LB) und Vale
 \begin{center}
     \minipanf    
     \makebox[\textwidth]{\includegraphics[width=1.1\linewidth, height=0.35\textheight]{pic/baendermodell}}
-    \captionof{figure}{Schema zur optisch stimulierten Lumineszenz}
+    \captionof{figure}{Schema zur optisch stimulierten Lumineszenz \cite{PA_neu}}
     \label{fig:band}
     \minipend
 \end{center}
 
 Im Grundzustand befinden sich Elektronen nur im Valenzband und den Aktivatortermen.
 Regt man das System allerdings an, zum Beisiel durch ionisierende Strahlung, können einige Elektronen vom Grundzustand auf das Leitungsband oder die Hafterme springen. Aus dem Leitungsband springen sie entweder direkt un den Grundzustand, wobei sie Licht emittieren, oder fallen zunächst auf den metastabilen Zustand im Haftterm, der die Elektronen einige Zeit speichert.
-Fällt nun Licht mit einer speziellen Wellenlänge auf das zuvor bestrahlte Material, springen die Elektronen aus den Hafttermen in das Leitungsband und fallen von dort meist in den Grundzustand, wobei sie Licht emittieren.
+Fällt nun Licht mit einer speziellen Wellenlänge auf das zuvor bestrahlte Material, springen die Elektronen aus den Hafttermen in das Leitungsband und fallen von dort meist in den Grundzustand, wobei sie Licht emittieren. \cite{PA_alt}
 
 \subsection{BeO$max$-Funktionsprinzip}
-Wir benutzen hier passive Sonden aus Berylliumoxid als Leuchtstoff. Diese Verbindung hat eine effektive Ordnungszahl von 7,13, was eine hohe Ähnlichkeit zu menschlichem Gewebe darstellt und deshalb ähnliche Absorptionseigenschaften besitzt.
+Wir benutzen hier passive Sonden aus Berylliumoxid als Leuchtstoff. Diese Verbindung hat eine effektive Ordnungszahl von 7,13, was eine hohe Ähnlichkeit zu menschlichem Gewebe (Weichteile: 7,42, Knochen: 10) darstellt und deshalb ähnliche Absorptionseigenschaften besitzt.
 Man bestrahlt die Sonden für ein zuvor berechnetes Zeitintervall. Danach sollte eine Abklingzeit von ca. 15 Minuten eingehalten werden, ehe die Sonden belichtet und ausgelesen werden. Damit wird ein Rauschen vermieden und sichergestellt, dass nur die in den Hafttermen gespeicherten Elektronen eine Rolle bei der Erzeugung des Lumineszenzlichtes spielen, bevor die Haftterme optisch angeregt werden.\\
 Die passiven Sensoren haben jeder für sich ein spezifisches Ansprechvermögen, welches aus einem Signal vor der Bestrahlung, sowie nach der Bestrahlung und einer bekannten Referenzdosis bestimmt werden kann. Das Signal aus der Nullmessung ändert sich nach jeder optischen Stimulation und muss von Chip zu Chip und Messung zu Messung immer neu bestimmt werden. Damit berechnet sich das Ansprechvermögen folgendermaßen:
 
-\begin{equation}
+\begin{equation} \label{eq:ansprechvermoegen}
     \epsilon = \frac{LS_R - LS_{R,0}}{D_R}
 \end{equation}
-
+\ \\
 Dabei beschreiben LS$_R$ das Lichtsignal aus der Messung bekannter Dosis, LS$_{R,0}$ das Nullsignal und D$_R$ die Referenzdosis.
-Nachfolgende Gleichung beschreibt die Errechnung der Dosis aus den Lichtsignalen der Nullmessung, der Messung nach der Bestrahlung und dem Ansprechvermögen:
+Nachfolgende Gleichung beschreibt die Errechnung der Dosis aus den Lichtsignalen der Nullmessung, der Messung nach der Bestrahlung und dem Ansprechvermögen: \cite{PA_alt}
 \begin{equation}
     D = \frac{LS - LS_0}{\epsilon}
 \end{equation}
