tested first diagramms - warning you maybe need to configure the texmf.cnf file entry buf_size, because the qtiplot exported diagrams are very rich of lines...

--- a/PET/2015_10_29/qtiplots/Diagramm_tex/Efenster_DetA_M.tex
+++ b/PET/2015_10_29/qtiplots/Diagramm_tex/Efenster_DetA_M.tex
@@ -8289,7 +8289,7 @@
 	\draw[line width=1pt, line join=bevel, line cap=rect](629.351pt,209.38pt) -- (629.351pt,202.605pt);
 	\draw[line width=1pt, line join=bevel, line cap=rect](769.374pt,209.38pt) -- (769.374pt,202.605pt);
 	\draw[line width=1pt, line join=bevel, line cap=rect](69.2588pt,209.38pt) -- (769.374pt,209.38pt);
-	\pgftext[center, base, at={\pgfpoint{430.609pt}{593.314pt}}]{\fontsize{16}{0}\selectfont{\textbf{Enrgie [keV]}}}
+	\pgftext[center, base, at={\pgfpoint{430.609pt}{593.314pt}}]{\fontsize{16}{0}\selectfont{\textbf{Energie [keV]}}}
 	\pgftext[center, base, at={\pgfpoint{178.787pt}{568.472pt}}]{\fontsize{16}{0}\selectfont{500}}
 	\pgftext[center, base, at={\pgfpoint{308.647pt}{568.472pt}}]{\fontsize{16}{0}\selectfont{1.000}}
 	\pgftext[center, base, at={\pgfpoint{438.884pt}{568.472pt}}]{\fontsize{16}{0}\selectfont{1.500}}
